--- a/app/src/main/res/layout/fragment_menu_usuari.xml
+++ b/app/src/main/res/layout/fragment_menu_usuari.xml
@@ -22,7 +22,7 @@
         android:id="@+id/logomenu"
         android:layout_width="200dp"
         android:layout_height="130dp"
-        android:layout_marginStart="130dp"
+        android:layout_marginStart="105dp"
         android:layout_marginTop="50dp"
         android:src="@drawable/logo"
         app:layout_constraintStart_toStartOf="parent"
@@ -34,7 +34,7 @@
         android:layout_height="70dp"
         android:layout_marginStart="50dp"
         android:layout_marginTop="51dp"
-        android:backgroundTint="#E11010"
+        android:backgroundTint="@color/purple_500"
         android:text="@string/veure_jugadors"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/logomenu" />
@@ -45,7 +45,7 @@
         android:layout_height="70dp"
         android:layout_marginStart="30dp"
         android:layout_marginTop="51dp"
-        android:backgroundTint="#E11010"
+        android:backgroundTint="@color/purple_500"
         android:text="@string/veure_classificacio"
         app:layout_constraintStart_toEndOf="@+id/btnJugadors"
         app:layout_constraintTop_toBottomOf="@+id/logomenu" />
