--- a/app/src/main/res/layout/fragment_menu_equips.xml
+++ b/app/src/main/res/layout/fragment_menu_equips.xml
@@ -20,7 +20,7 @@
     <Button
         android:id="@+id/btnCrearEquips"
         style="@style/Widget.ComunicaProdis.ButtonEnter"
-        android:layout_width="300dp"
+        android:layout_width="320dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="48dp"
         android:layout_marginTop="50dp"
@@ -32,7 +32,7 @@
     <Button
         android:id="@+id/btnEliminarEquips"
         style="@style/Widget.ComunicaProdis.ButtonEnter"
-        android:layout_width="300dp"
+        android:layout_width="320dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="48dp"
         android:layout_marginTop="50dp"
@@ -43,13 +43,24 @@
     <Button
         android:id="@+id/btnModificarPuntuacio"
         style="@style/Widget.ComunicaProdis.ButtonEnter"
-        android:layout_width="300dp"
+        android:textSize="21sp"
+        android:layout_width="320dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="48dp"
         android:layout_marginTop="44dp"
         android:text="@string/modificar_puntuacio"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btnEliminarEquips" />
+
+    <Button
+        android:id="@+id/btn_tornar_menuequips"
+        style="@style/Widget.ComunicaProdis.ButtonConfirm"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="150dp"
+        android:layout_marginBottom="150dp"
+        android:text="@string/tornar"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
-
-
