--- a/app/src/main/res/layout/fragment_menu_jugadors.xml
+++ b/app/src/main/res/layout/fragment_menu_jugadors.xml
@@ -20,7 +20,7 @@
     <Button
         android:id="@+id/btnCrearJugador"
         style="@style/Widget.ComunicaProdis.ButtonEnter"
-        android:layout_width="250dp"
+        android:layout_width="320dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="48dp"
         android:layout_marginTop="50dp"
@@ -32,11 +32,22 @@
     <Button
         android:id="@+id/btnEliminarJugador"
         style="@style/Widget.ComunicaProdis.ButtonEnter"
-        android:layout_width="250dp"
+        android:layout_width="320dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="48dp"
         android:layout_marginTop="50dp"
         android:text="@string/eliminar_jugador"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btnCrearJugador" />
+
+    <Button
+        android:id="@+id/btn_tornar_menujugador"
+        style="@style/Widget.ComunicaProdis.ButtonConfirm"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="150dp"
+        android:layout_marginBottom="150dp"
+        android:text="@string/tornar"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
