--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -128,9 +128,9 @@
             <Button
                 android:id="@+id/registre_Guardar"
                 style="@style/Widget.ComunicaProdis.ButtonConfirm"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
+                android:layout_width="168dp"
+                android:layout_height="50dp"
+                android:layout_marginStart="3dp"
                 android:layout_marginTop="20dp"
                 android:backgroundTint="#2196F3"
                 android:text="@string/confirmar"
@@ -140,9 +140,9 @@
             <Button
                 android:id="@+id/registre_cancelar"
                 style="@style/Widget.ComunicaProdis.ButtonCancel"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="15dp"
+                android:layout_width="168dp"
+                android:layout_height="50dp"
+                android:layout_marginStart="10dp"
                 android:text="@string/cancelar"
                 app:layout_constraintStart_toEndOf="@+id/registre_Guardar"
                 app:layout_constraintTop_toTopOf="@+id/registre_Guardar" />
