--- a/app/src/main/res/layout/fragment_crear_equips.xml
+++ b/app/src/main/res/layout/fragment_crear_equips.xml
@@ -29,7 +29,7 @@
         android:text="@string/tornar"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/crear_jugador" />
+        app:layout_constraintTop_toBottomOf="@+id/crear_equip" />
 
     <TextView
         android:id="@+id/nomEquip"
@@ -77,7 +77,7 @@
 
 
     <Button
-        android:id="@+id/crear_jugador"
+        android:id="@+id/crear_equip"
         style="@style/Widget.ComunicaProdis.ButtonEnter"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
