--- a/app/src/main/res/layout/fragment_classificacio.xml
+++ b/app/src/main/res/layout/fragment_classificacio.xml
@@ -10,10 +10,10 @@
         android:id="@+id/TitolClassificacio"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="50dp"
         android:layout_marginTop="75dp"
-        android:textSize="30sp"
         android:text="@string/classificaci"
+        android:textSize="30sp"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
