--- a/app/src/main/res/layout/fragment_crear_jugador.xml
+++ b/app/src/main/res/layout/fragment_crear_jugador.xml
@@ -11,10 +11,10 @@
         android:id="@+id/TitolCrearJugadors"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="35dp"
-        android:layout_marginTop="75dp"
+        android:layout_marginTop="90dp"
         android:text="@string/crear_jugador"
         android:textSize="30sp"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -23,11 +23,11 @@
         style="@style/Widget.ComunicaProdis.ButtonConfirm"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="120dp"
-        android:layout_marginBottom="200dp"
+        android:layout_marginTop="63dp"
         android:text="@string/tornar"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/crear_jugador" />
 
     <TextView
         android:id="@+id/nomEquip"
@@ -106,10 +106,10 @@
         style="@style/Widget.ComunicaProdis.ButtonEnter"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="122dp"
         android:layout_marginTop="50dp"
         android:backgroundTint="@color/blue"
         android:text="@string/crear"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editjugador" />
 </androidx.constraintlayout.widget.ConstraintLayout>
