--- a/app/src/main/res/layout/fragment_menu_jugadors.xml
+++ b/app/src/main/res/layout/fragment_menu_jugadors.xml
@@ -10,10 +10,10 @@
         android:id="@+id/titol_menu_jugador"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="55dp"
-        android:layout_marginTop="130dp"
+        android:layout_marginTop="90dp"
         android:text="@string/jugador"
         android:textSize="25sp"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -22,9 +22,9 @@
         style="@style/Widget.ComunicaProdis.ButtonEnter"
         android:layout_width="320dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="48dp"
         android:layout_marginTop="50dp"
         android:text="@string/crear_jugador"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/titol_menu_jugador" />
 
@@ -34,9 +34,9 @@
         style="@style/Widget.ComunicaProdis.ButtonEnter"
         android:layout_width="320dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="48dp"
         android:layout_marginTop="50dp"
         android:text="@string/eliminar_jugador"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btnCrearJugador" />
 
@@ -45,9 +45,9 @@
         style="@style/Widget.ComunicaProdis.ButtonConfirm"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="150dp"
-        android:layout_marginBottom="150dp"
+        android:layout_marginTop="100dp"
         android:text="@string/tornar"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btnEliminarJugador" />
 </androidx.constraintlayout.widget.ConstraintLayout>
