--- a/app/src/main/res/layout/fragment_menu_usuari.xml
+++ b/app/src/main/res/layout/fragment_menu_usuari.xml
@@ -10,11 +10,11 @@
         android:id="@+id/titol_menu"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="15dp"
         android:layout_marginTop="130dp"
         android:text="@string/benvingut_a_la_kings_league"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1"
         android:textSize="25sp"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -22,9 +22,9 @@
         android:id="@+id/logomenu"
         android:layout_width="200dp"
         android:layout_height="130dp"
-        android:layout_marginStart="105dp"
         android:layout_marginTop="50dp"
         android:src="@drawable/logo"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/titol_menu" />
 
