--- a/app/src/main/res/layout/fragment_modificar_classificacio.xml
+++ b/app/src/main/res/layout/fragment_modificar_classificacio.xml
@@ -11,10 +11,10 @@
         android:id="@+id/TitolModificarClassificacio"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="90dp"
+        android:layout_marginStart="5dp"
+        android:layout_marginTop="75dp"
         android:text="@string/modificar_classificacio"
         android:textSize="30sp"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -23,11 +23,11 @@
         style="@style/Widget.ComunicaProdis.ButtonConfirm"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="63dp"
+        android:layout_marginStart="120dp"
+        android:layout_marginBottom="200dp"
         android:text="@string/tornar"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/ModificarClassificacio" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
         android:id="@+id/nomEquip"
@@ -94,6 +94,7 @@
         android:minHeight="48dp"
         android:textColor="#757575"
         app:layout_constraintStart_toStartOf="parent"
+        android:inputType="number"
         app:layout_constraintTop_toBottomOf="@+id/Puntuacio"
         tools:ignore="DuplicateSpeakableTextCheck,MissingConstraints,TextContrastCheck">
 
@@ -104,10 +105,10 @@
         style="@style/Widget.ComunicaProdis.ButtonEnter"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="95dp"
         android:layout_marginTop="50dp"
         android:backgroundTint="@color/blue"
         android:text="@string/modificar"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editPuntuacio" />
 </androidx.constraintlayout.widget.ConstraintLayout>
