--- a/app/src/main/res/layout/fragment_classificacio.xml
+++ b/app/src/main/res/layout/fragment_classificacio.xml
@@ -10,7 +10,7 @@
         android:id="@+id/TitolClassificacio"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="75dp"
+        android:layout_marginTop="90dp"
         android:text="@string/classificaci"
         android:textSize="30sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -27,5 +27,16 @@
         android:text="@string/tornar"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rvClassificacio"
+        android:layout_width="350dp"
+        android:layout_height="450dp"
+        android:layout_marginStart="50dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginBottom="5dp"
+        app:layout_constraintBottom_toTopOf="@+id/btn_tornar_classificacio"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/TitolClassificacio" />
 </androidx.constraintlayout.widget.ConstraintLayout>
 
